# SIK-Render

./: .gitattributes  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  nuxt.config.ts  package.json  tsconfig.json
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/components/: AppearanceSettingsModal.vue  BlenderOutputSettingsModal.vue  BlenderPathSettingsModal.vue  BlenderSettingsModal.vue  ColorModeSelect.vue  FfmpegJobCard.vue  FfmpegPathSettingsModal.vue  FfmpegSettingsModal.vue  JobCard.vue  JobMetadataModal.vue  NetworkSettingsModal.vue  NodeCard.vue  NodeList.vue  OutputPathTemplateSettingsModal.vue  PathTemplateInput.vue  RenderProgress.vue  TranscodeSubmitModal.vue  VideoPreviewPlayer.vue
app/composables/: useCardInfoHeight.ts  useDurationNow.ts  useFfmpegStatus.ts  useJobRetry.ts  useJobStatus.ts  useQueueOrder.ts  useTauri.ts  (+4 more)
scripts/: bump-version.mjs  sync-version.mjs  version-utils.mjs  version.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_paths.rs  lib.rs  main.rs  path_template.rs  state.rs
src-tauri/src/blender/: command.rs  discovery.rs  encoder.rs  ffmpeg.rs  frame_path.rs  metadata.rs  mod.rs  parser.rs  process.rs  project.rs
src-tauri/src/commands/: app.rs  blender.rs  jobs.rs  mod.rs  nodes.rs  path_template.rs  settings.rs  transcode.rs
src-tauri/src/db/: init.rs  mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_job_logs.sql  003_job_number.sql  004_resume_from_existing.sql  005_drop_legacy_tables.sql  006_job_preview_dimensions.sql  007_job_runtime_progress.sql  009_job_auto_transcode_mp4.sql  010_job_crash_count.sql  011_jobs_fps.sql  012_ffmpeg_jobs.sql  013_job_transcode_overrides.sql  014_job_transcode_frame_range_overrides.sql  015_job_original_frame_range.sql  016_job_render_mode.sql  017_job_shadow_resolution_scale.sql  018_node_job_events.sql  019_ffmpeg_job_encoder.sql  020_ffmpeg_job_actual_encoder.sql  021_job_number_counters.sql
src-tauri/src/network/: discovery.rs  events.rs  file_names.rs  mod.rs  peer.rs  peers.rs  server.rs  types.rs
src-tauri/src/node/: manager.rs
src-tauri/src/queue/: ffmpeg_job.rs  job.rs  mod.rs  scheduler.rs  transcode_scheduler.rs
(+44 files in other folders)
