[package]
name = "sik-render"
version = "0.1.0"
edition = "2021"

[lib]
name = "sik_render_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sik-render"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
regex = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
opt-level = "s"
